# opencv

./: .gitignore  .gitmodules  CMakeLists.txt  build.py  conanfile.py  project.conf
cmake/: OpenCVCompilerOptimizations.cmake  OpenCVInstallLayout.cmake
cmake/profiles/: ios_armv8
modules/python/: CMakeLists.txt  python_loader.cmake
modules/python/src2/: cv2.cpp  pyopencv_custom_headers.h  pyopencv_signatures.json
modules/python_bindings_generator/: pyopencv_custom_headers.h  pyopencv_generated_modules_content.h  pyopencv_signatures.json
modules/videoio/: CMakeLists.txt
modules/videoio/cmake/: detect_android_camera.cmake  init.cmake
modules/videoio/include/opencv2/: videoio.hpp
modules/videoio/src/: cap_android_camera.cpp  cap_avfoundation.mm  cap_interface.hpp  videoio_registry.cpp
scripts/: build-android.bat  build-headers.bat  build-ios.sh  build-macos.sh  build-pc.bat  build.bat
